--- a/trivia/Base.lproj/Main.storyboard
+++ b/trivia/Base.lproj/Main.storyboard
@@ -1,24 +1,131 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="IQq-1F-l58">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="HelveticaNeue.ttc">
+            <string>HelveticaNeue</string>
+        </array>
+    </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--Category View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CategoryViewController" id="BYZ-38-t0r" customClass="CategoryViewController" customModule="trivia" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="eIE-8x-cP3"/>
+                        <viewControllerLayoutGuide type="bottom" id="e1r-eq-Hz6"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="LT0-bi-kzf">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewLayout key="collectionViewLayout" id="4aS-b2-5Ps" customClass="CustomImageFlowLayout" customModule="trivia" customModuleProvider="target"/>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CategoryCollectionViewCell" id="FLK-Aa-sTx" customClass="CategoryCollectionViewCell" customModule="trivia" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="166" height="157"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="166" height="157"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mask" translatesAutoresizingMaskIntoConstraints="NO" id="oHT-Y8-PpL">
+                                                    <rect key="frame" x="0.0" y="0.0" width="166" height="157"/>
+                                                </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shape" translatesAutoresizingMaskIntoConstraints="NO" id="UOY-lQ-LuM">
+                                                    <rect key="frame" x="59" y="44.5" width="48" height="48"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="48" id="5yu-LU-T5h"/>
+                                                        <constraint firstAttribute="width" constant="48" id="ypM-fE-6Qp"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ptp-xw-k5y">
+                                                    <rect key="frame" x="18" y="97.5" width="130" height="17"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="oHT-Y8-PpL" secondAttribute="trailing" id="L80-hn-2zy"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="ptp-xw-k5y" secondAttribute="trailing" constant="10" id="VFD-w9-d4q"/>
+                                            <constraint firstItem="UOY-lQ-LuM" firstAttribute="centerX" secondItem="FLK-Aa-sTx" secondAttribute="centerX" id="ZBQ-dC-Nte"/>
+                                            <constraint firstItem="ptp-xw-k5y" firstAttribute="leading" secondItem="FLK-Aa-sTx" secondAttribute="leadingMargin" constant="10" id="drT-Mk-nWX"/>
+                                            <constraint firstItem="oHT-Y8-PpL" firstAttribute="top" secondItem="FLK-Aa-sTx" secondAttribute="top" id="fBL-lg-ME6"/>
+                                            <constraint firstItem="ptp-xw-k5y" firstAttribute="top" secondItem="UOY-lQ-LuM" secondAttribute="bottom" constant="5" id="jTg-U3-5vO"/>
+                                            <constraint firstAttribute="bottom" secondItem="oHT-Y8-PpL" secondAttribute="bottom" id="nEw-j7-63c"/>
+                                            <constraint firstItem="oHT-Y8-PpL" firstAttribute="leading" secondItem="FLK-Aa-sTx" secondAttribute="leading" id="q45-T7-5et"/>
+                                            <constraint firstItem="UOY-lQ-LuM" firstAttribute="centerY" secondItem="FLK-Aa-sTx" secondAttribute="centerY" constant="-10" id="qNf-3X-4NI"/>
+                                        </constraints>
+                                        <size key="customSize" width="166" height="157"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <outlet property="categoryLabel" destination="ptp-xw-k5y" id="tuf-zT-TRO"/>
+                                            <outlet property="maskImageView" destination="oHT-Y8-PpL" id="jmD-UF-B6c"/>
+                                            <outlet property="shapeImageView" destination="UOY-lQ-LuM" id="RBB-Nf-30F"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="Up2-1c-ISg"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="vGn-dy-G69"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <constraints>
+                            <constraint firstItem="e1r-eq-Hz6" firstAttribute="top" secondItem="LT0-bi-kzf" secondAttribute="bottom" id="1Fl-sa-Wr7"/>
+                            <constraint firstItem="LT0-bi-kzf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="d2s-di-hq0"/>
+                            <constraint firstItem="LT0-bi-kzf" firstAttribute="top" secondItem="eIE-8x-cP3" secondAttribute="bottom" id="kuE-fs-40Z"/>
+                            <constraint firstAttribute="trailing" secondItem="LT0-bi-kzf" secondAttribute="trailing" id="ygM-2R-zvT"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="zJw-n0-8oq"/>
+                    <connections>
+                        <outlet property="categoryCollectionView" destination="LT0-bi-kzf" id="QSV-nG-4jG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="456.80000000000001" y="117.39130434782609"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="bSf-WV-XhT">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="IQq-1F-l58" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="8wA-7D-xcw">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ZAS-la-Q3T"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iND-KA-ifa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-642" y="112"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="mask" width="640" height="480"/>
+        <image name="shape" width="188" height="200"/>
+    </resources>
 </document>
